--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         position: relative;
         width: 1024px;
         height: 1024px;
-        background-image: url('이미지-주소를-여기에-넣기.png');
+        background-image: url('background.png');
         background-size: cover;
         background-position: center;
     }
