--- a/index.html
+++ b/index.html
@@ -1,161 +1,251 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>noblesse-time</title>
-
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: url('background.png') no-repeat center center fixed;
-        background-size: cover;
-        font-family: "KoPub Batang", "Nanum Myeongjo", serif;
-        color: #F6EAD2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
+  @font-face{
+    /* 필요하면 JunMyeongjo.ttf 파일을 같은 폴더에 넣고 여기 경로를 바꿔주세요 */
+    font-family: "JunMyeongjo";
+    src: local("JunMyeongjo"), local("Nanum Myeongjo");
+  }
 
-    /* 전체 레이아웃 */
-    .wrapper {
-        position: relative;
-        width: 100%;
-        max-width: 1024px;
-        height: 100%;
-        max-height: 1024px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
+  html,body{
+    height:100%;
+    margin:0;
+  }
 
-    /* 시·도 선택 */
-    .selector-area {
-        margin-top: 260px;
-        text-align: center;
-    }
+  body{
+    background: url('background.png') no-repeat center center fixed;
+    background-size: cover;
+    font-family: "JunMyeongjo", "KoPub Batang", "Nanum Myeongjo", Georgia, serif;
+    color:#F6EAD2;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+  }
 
-    select {
-        font-size: 22px;
-        padding: 6px 14px;
-        margin: 0 10px;
-        border-radius: 8px;
-        border: 1px solid #F6EAD2;
-        background: rgba(0,0,0,0.4);
-        color: #F6EAD2;
-    }
+  /* 전체 컨테이너 (중앙 정렬) */
+  .page {
+    position: relative;
+    width: 1024px;
+    height: 1024px;
+    margin: 0 auto;
+  }
 
-    /* 시간 표시 */
-    .time-area {
-        margin-top: 260px;
-        text-align: center;
-        font-size: 28px;
-        font-weight: 600;
-        color: #F6EAD2;
-        text-shadow: 0px 0px 10px rgba(0,0,0,0.6);
-    }
+  /* 상단 작은 선택 (타이틀 위에 떠 있는 작은 박스들) */
+  .top-selects {
+    position: absolute;
+    top: 220px; /* 타이틀 바로 아래의 작은 셀렉트 위치(이미지 기준) */
+    left: 50%;
+    transform: translateX(-50%);
+    display:flex;
+    gap:10px;
+    z-index:10;
+  }
+  .top-selects select {
+    font-size:16px;
+    padding:8px 12px;
+    border-radius:6px;
+    border:1px solid rgba(246,234,210,0.85);
+    background: rgba(0,0,0,0.45);
+    color:#F6EAD2;
+  }
+
+  /* 큰 버튼형 셀렉트 (디자인용) */
+  .big-selects {
+    position: absolute;
+    top: 360px; /* 큰 버튼들이 원래 있던 위치 */
+    left: 50%;
+    transform: translateX(-50%);
+    display:flex;
+    gap:40px;
+    z-index:8;
+  }
+  .big-selects select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    font-size:20px;
+    padding:14px 36px;
+    border-radius:8px;
+    border:2px solid #C8A76B; /* 골드 테두리 느낌 */
+    background: rgba(0,0,0,0.2);
+    color:#F6EAD2;
+    min-width:260px;
+    text-align:center;
+  }
+
+  /* 하트 바로 아래 시간 (정중앙) */
+  #timeDisplay {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 560px; /* 하트 아래 중앙 위치 — 필요하면 px값 조정 */
+    color: #F6EAD2;
+    font-size: 28.4px;
+    font-weight:600;
+    text-shadow: 0 2px 8px rgba(0,0,0,0.6);
+    z-index:9;
+    white-space: nowrap;
+  }
+
+  /* 하단 보조 문구 (선택사항) */
+  .note {
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
+    bottom: 120px;
+    color: #fff;
+    text-align:center;
+    z-index:8;
+    width: 80%;
+    pointer-events:none;
+  }
+
+  /* 반응형(간단) */
+  @media (max-width:1100px){
+    .page{ width:100%; height:auto; }
+    .big-selects select { min-width:160px; padding:10px 20px; }
+    #timeDisplay{ font-size:24px; top:540px; }
+  }
 </style>
 </head>
 <body>
-
-<div class="wrapper">
-
-    <!-- 지역 선택 -->
-    <div class="selector-area">
-        <select id="sido"></select>
-        <select id="sigungu"></select>
+  <div class="page" role="main">
+    <!-- 상단 작은 셀렉트(동기화 대상) -->
+    <div class="top-selects">
+      <select id="sido_top" aria-label="광역시도 선택 (상단)"></select>
+      <select id="sigungu_top" aria-label="시군구 선택 (상단)"></select>
     </div>
 
-    <!-- 시간 표시 -->
-    <div class="time-area" id="timeDisplay">시간 로딩중...</div>
+    <!-- 큰 스타일 셀렉트(동기화 대상) -->
+    <div class="big-selects">
+      <select id="sido" aria-label="광역시도 선택"></select>
+      <select id="sigungu" aria-label="시군구 선택"></select>
+    </div>
 
-</div>
+    <!-- 시간 -->
+    <div id="timeDisplay" aria-live="polite">시간 로딩중...</div>
+
+    <!-- 보조 문구 -->
+    <div class="note">잠시만 기다려주시면 노블레스가 당신의 특별한 인연을 찾아드립니다.</div>
+  </div>
 
 <script>
-/* ---------------------------
-   17개 시·도 데이터
----------------------------*/
+/* regionData: 시도 -> 시군구 (필요하면 더 추가/수정 가능) */
 const regionData = {
-    "서울특별시": ["종로구","중구","용산구","성동구","광진구","동대문구","중랑구","성북구","강북구","도봉구","노원구","은평구","서대문구","마포구","양천구","강서구","구로구","금천구","영등포구","동작구","관악구","서초구","강남구","송파구","강동구"],
-
-    "부산광역시": ["중구","서구","동구","영도구","부산진구","동래구","남구","북구","해운대구","사하구","금정구","강서구","연제구","수영구","사상구","기장군"],
-
-    "대구광역시": ["중구","동구","서구","남구","북구","수성구","달서구","달성군"],
-
-    "인천광역시": ["중구","동구","미추홀구","연수구","남동구","부평구","계양구","서구","강화군","옹진군"],
-
-    "광주광역시": ["동구","서구","남구","북구","광산구"],
-
-    "대전광역시": ["동구","중구","서구","유성구","대덕구"],
-
-    "울산광역시": ["중구","남구","동구","북구","울주군"],
-
-    "세종특별자치시": ["세종시"],
-
-    "경기도": ["수원시","성남시","의정부시","안양시","부천시","광명시","평택시","동두천시","안산시","고양시","과천시","구리시","남양주시","오산시","시흥시","군포시","의왕시","하남시","용인시","파주시","이천시","안성시","김포시","화성시","광주시","양주시","포천시","여주시"],
-
-    "강원도": ["춘천시","원주시","강릉시","동해시","태백시","속초시","삼척시","홍천군","횡성군","영월군","평창군","정선군","철원군","화천군","양구군","인제군","고성군","양양군"],
-
-    "충청북도": ["청주시","충주시","제천시","보은군","옥천군","영동군","증평군","진천군","괴산군","음성군","단양군"],
-
-    "충청남도": ["천안시","공주시","보령시","아산시","서산시","논산시","계룡시","당진시","금산군","부여군","서천군","청양군","홍성군","예산군","태안군"],
-
-    "전라북도": ["전주시","군산시","익산시","정읍시","남원시","김제시","완주군","진안군","무주군","장수군","임실군","순창군","고창군","부안군"],
-
-    "전라남도": ["목포시","여수시","순천시","나주시","광양시","담양군","곡성군","구례군","고흥군","보성군","화순군","장흥군","강진군","해남군","영암군","무안군","함평군","영광군","장성군","완도군","진도군","신안군"],
-
-    "경상북도": ["포항시","경주시","김천시","안동시","구미시","영주시","영천시","상주시","문경시","경산시","의성군","청송군","영양군","영덕군","청도군","고령군","성주군","칠곡군","예천군","봉화군","울진군","울릉군"],
-
-    "경상남도": ["창원시","진주시","통영시","사천시","김해시","밀양시","거제시","양산시","의령군","함안군","창녕군","고성군","남해군","하동군","산청군","함양군","거창군","합천군"],
-
-    "제주특별자치도": ["제주시","서귀포시"]
+  "서울특별시": ["종로구","중구","용산구","성동구","광진구","동대문구","중랑구","성북구","강북구","도봉구","노원구","은평구","서대문구","마포구","양천구","강서구","구로구","금천구","영등포구","동작구","관악구","서초구","강남구","송파구","강동구"],
+  "부산광역시": ["중구","서구","동구","영도구","부산진구","동래구","남구","북구","해운대구","사하구","금정구","강서구","연제구","수영구","사상구","기장군"],
+  "대구광역시": ["중구","동구","서구","남구","북구","수성구","달서구","달성군"],
+  "인천광역시": ["중구","동구","미추홀구","연수구","남동구","부평구","계양구","서구","강화군","옹진군"],
+  "광주광역시": ["동구","서구","남구","북구","광산구"],
+  "대전광역시": ["동구","중구","서구","유성구","대덕구"],
+  "울산광역시": ["중구","남구","동구","북구","울주군"],
+  "세종특별자치시": ["세종시"],
+  "경기도": ["수원시","성남시","의정부시","안양시","부천시","광명시","평택시","동두천시","안산시","고양시","과천시","구리시","남양주시","오산시","시흥시","군포시","의왕시","하남시","용인시","파주시","이천시","안성시","김포시","화성시","광주시","양주시","포천시","여주시","가평군"],
+  "강원도": ["춘천시","원주시","강릉시","동해시","태백시","속초시","삼척시","홍천군","횡성군","영월군","평창군","정선군","철원군","화천군","양구군","인제군","고성군","양양군"],
+  "충청북도": ["청주시","충주시","제천시","보은군","옥천군","영동군","증평군","진천군","괴산군","음성군","단양군"],
+  "충청남도": ["천안시","공주시","보령시","아산시","서산시","논산시","계룡시","당진시","금산군","부여군","서천군","청양군","홍성군","예산군","태안군"],
+  "전라북도": ["전주시","군산시","익산시","정읍시","남원시","김제시","완주군","진안군","무주군","장수군","임실군","순창군","고창군","부안군"],
+  "전라남도": ["목포시","여수시","순천시","나주시","광양시","담양군","곡성군","구례군","고흥군","보성군","화순군","장흥군","강진군","해남군","영암군","무안군","함평군","영광군","장성군","완도군","진도군","신안군"],
+  "경상북도": ["포항시","경주시","김천시","안동시","구미시","영주시","영천시","상주시","문경시","경산시","의성군","청송군","영양군","영덕군","청도군","고령군","성주군","칠곡군","예천군","봉화군","울진군","울릉군"],
+  "경상남도": ["창원시","진주시","통영시","사천시","김해시","밀양시","거제시","양산시","의령군","함안군","창녕군","고성군","남해군","하동군","산청군","함양군","거창군","합천군"],
+  "제주특별자치도": ["제주시","서귀포시"]
 };
 
-/* ---------------------------
-   시·도/시·군·구 선택 동작
----------------------------*/
-const sidoSelect = document.getElementById("sido");
-const sigunguSelect = document.getElementById("sigungu");
-
-for (let sido in regionData) {
-    let option = document.createElement("option");
-    option.value = sido;
-    option.textContent = sido;
-    sidoSelect.appendChild(option);
+/* helper: select 요소에 option 채움 */
+function fillSelect(el, items){
+  el.innerHTML = '';
+  items.forEach(it=>{
+    const o = document.createElement('option');
+    o.value = it;
+    o.textContent = it;
+    el.appendChild(o);
+  });
 }
 
-function updateSigungu() {
-    sigunguSelect.innerHTML = "";
-    const list = regionData[sidoSelect.value];
-    list.forEach(name => {
-        let opt = document.createElement("option");
-        opt.value = name;
-        opt.textContent = name;
-        sigunguSelect.appendChild(opt);
-    });
-}
-sidoSelect.addEventListener("change", updateSigungu);
-updateSigungu();
+/* element references (상단/하단 동기화) */
+const sidoTop = document.getElementById('sido_top');
+const sigunguTop = document.getElementById('sigungu_top');
+const sidoBig = document.getElementById('sido');
+const sigunguBig = document.getElementById('sigungu');
 
-/* ---------------------------
-   시간 자동 업데이트
----------------------------*/
-function updateTime() {
-    const now = new Date();
-    const year = now.getFullYear();
-    const month = now.getMonth() + 1;
-    const date = now.getDate();
-    const hour = now.getHours();
-    const minute = now.getMinutes().toString().padStart(2, "0");
+/* 초기 시도 목록 공통 채우기 */
+const sidos = Object.keys(regionData);
+fillSelect(sidoTop, sidos);
+fillSelect(sidoBig, sidos);
 
-    document.getElementById("timeDisplay").innerText =
-        `${year}년 ${month}월 ${date}일 ${hour}시 ${minute}분`;
+/* 시도 선택 시 시군구 갱신 함수 (동기화 포함) */
+function onSidoChange(sourceId){
+  const source = (sourceId === 'top') ? sidoTop : sidoBig;
+  const targetTop = sidoTop;
+  const targetBig = sidoBig;
+  const pick = source.value;
+
+  // 양쪽 sido 맞추기
+  targetTop.value = pick;
+  targetBig.value = pick;
+
+  const list = regionData[pick] || [];
+  fillSelect(sigunguTop, list);
+  fillSelect(sigunguBig, list);
+
+  // 기본값으로 첫번째 선택(필요시 유지)
+  sigunguTop.value = list[0] || '';
+  sigunguBig.value = list[0] || '';
 }
-setInterval(updateTime, 1000);
+
+/* 시군구 선택 시 동기화 */
+function onSigunguChange(sourceId){
+  const source = (sourceId === 'top') ? sigunguTop : sigunguBig;
+  const pick = source.value;
+  sigunguTop.value = pick;
+  sigunguBig.value = pick;
+}
+
+/* 이벤트 바인딩 */
+sidoTop.addEventListener('change', ()=> onSidoChange('top'));
+sidoBig.addEventListener('change', ()=> onSidoChange('big'));
+sigunguTop.addEventListener('change', ()=> onSigunguChange('top'));
+sigunguBig.addEventListener('change', ()=> onSigunguChange('big'));
+
+/* 초기 선택: 경기도 / 가평군 (요청에 맞춤) */
+(function initRegion(){
+  const initialSido = "경기도";
+  const initialSigungu = "가평군";
+  if(sidos.includes(initialSido)){
+    sidoTop.value = initialSido;
+    sidoBig.value = initialSido;
+    fillSelect(sigunguTop, regionData[initialSido]);
+    fillSelect(sigunguBig, regionData[initialSido]);
+    if((regionData[initialSido] || []).includes(initialSigungu)){
+      sigunguTop.value = initialSigungu;
+      sigunguBig.value = initialSigungu;
+    } else {
+      sigunguTop.value = regionData[initialSido][0] || '';
+      sigunguBig.value = regionData[initialSido][0] || '';
+    }
+  } else {
+    onSidoChange('big');
+  }
+})();
+
+/* -------------------------------
+    시간: 사용자(PC) 로컬 시간 표시
+   -------------------------------*/
+function updateTime(){
+  const now = new Date();
+  const y = now.getFullYear();
+  const m = now.getMonth()+1;
+  const d = now.getDate();
+  const hh = now.getHours();
+  const mm = String(now.getMinutes()).padStart(2,'0');
+  document.getElementById('timeDisplay').textContent = `${y}년 ${m}월 ${d}일 ${hh}시 ${mm}분`;
+}
 updateTime();
-</script>
+setInterval(updateTime, 1000);
 
+</script>
 </body>
 </html>
