--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-image: url("nobless-bg.png");
+        background-image: url("background.png");
         background-size: cover;
         background-position: center;
         z-index: -1;
