--- a/index.html
+++ b/index.html
@@ -2,129 +2,184 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Noblesse Time</title>
 
 <style>
     body {
         margin: 0;
         padding: 0;
-        background: #000;
-        overflow-x: hidden;
-        font-family: "KoPub Batang", "Nanum Myeongjo", serif;
-    }
-
-    /* 배경 이미지를 전체 고정 */
-    .background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background-image: url("background.png");
+        width: 1024px;
+        height: 1024px;
+        background-image: url("background.png"); /* 네 이미지 파일 */
         background-size: cover;
         background-position: center;
-        z-index: -1;
-    }
-
-    /* 전체 레이아웃 중앙 정렬 */
-    .container {
+        background-repeat: no-repeat;
         position: relative;
-        width: 100%;
-        height: 100vh;
+        font-family: "JunMyeongjo", serif;
+        overflow: hidden;
     }
 
-    /* 기준 해상도: 1920×1080 기준으로 좌표 맞춤 */
-    .ui-wrapper {
+    /* 폰트 등록 */
+    @font-face {
+        font-family: "JunMyeongjo";
+        src: url("JunMyeongjo.ttf");
+    }
+
+    /* 시도/시군구 선택 박스 */
+    #region1, #region2 {
         position: absolute;
-        top: 260px;       /* 이미지 기준 정확한 위치 */
+        top: 390px;
+        width: 180px;
+        height: 46px;
+        background: rgba(0, 0, 0, 0.55);
+        border: 1px solid #C8A76B;
+        color: #F6EAD2;
+        font-size: 20px;
+        padding-left: 10px;
+        font-family: "JunMyeongjo";
+        appearance: none;
+    }
+
+    #region1 {
+        left: 260px;
+    }
+
+    #region2 {
+        left: 500px;
+    }
+
+    /* 시간 표시 */
+    #time {
+        position: absolute;
+        top: 650px;     /* 이미지 하트 아래쪽 */
         left: 50%;
         transform: translateX(-50%);
-        width: 800px;
-        text-align: center;
-    }
-
-    /* ----- 셀렉트 박스 ----- */
-    .select-row {
-        display: flex;
-        justify-content: center;
-        gap: 110px;
-        margin-bottom: 40px;
-    }
-
-    select {
-        width: 240px;
-        height: 55px;
-        padding-left: 20px;
-        font-size: 22px;
-        background: transparent;
-        border: 2px solid #C8A96A;
-        border-radius: 8px;
         color: #F6EAD2;
-        appearance: none;
-        outline: none;
-        font-weight: bold;
-        text-shadow: 0px 0px 3px #000;
-    }
-
-    option {
-        background: #000;
-        color: #fff;
-    }
-
-    /* ----- 시간 텍스트 ----- */
-    .time-text {
-        font-size: 34px;
-        color: #F6EAD2;
-        font-weight: bold;
-        margin-top: 20px;
-
-        /* 이미지 위치 정확히 맞춤 */
-        position: relative;
-        top: -10px;
+        font-size: 28px;
+        white-space: nowrap;
+        font-family: "JunMyeongjo", serif;
     }
 
 </style>
 </head>
 <body>
 
-<div class="background"></div>
+<!-- 시도/시군구 선택 -->
+<select id="region1"></select>
+<select id="region2"></select>
 
-<div class="container">
-    <div class="ui-wrapper">
-
-        <!-- 시/도, 군/구 선택 -->
-        <div class="select-row">
-            <select id="sido">
-                <option value="경기도">경기도</option>
-            </select>
-
-            <select id="gungu">
-                <option value="가평군">가평군</option>
-            </select>
-        </div>
-
-        <!-- 시간 표시 -->
-        <div id="timeDisplay" class="time-text"></div>
-
-    </div>
-</div>
+<!-- 실시간 시간 표시 -->
+<div id="time"></div>
 
 <script>
-    /* 자동 시간 표시 */
-    function updateTime() {
-        const now = new Date();
-        const y = now.getFullYear();
-        const m = now.getMonth() + 1;
-        const d = now.getDate();
-        const h = now.getHours();
-        const min = now.getMinutes().toString().padStart(2, "0");
 
-        document.getElementById("timeDisplay").innerText =
-            `${y}년 ${m}월 ${d}일 ${h}시 ${min}분`;
-    }
+/* ------------------------------
+    한국 시도 + 시군구 데이터
+   ------------------------------ */
 
-    setInterval(updateTime, 1000);
-    updateTime();
+const regionData = {
+    "서울특별시": ["강남구","강동구","강북구","강서구","관악구","광진구","구로구","금천구","노원구","도봉구","동대문구","동작구","마포구","서대문구","서초구","성동구","성북구","송파구","양천구","영등포구","용산구","은평구","종로구","중구","중랑구"],
+
+    "부산광역시": ["강서구","금정구","기장군","남구","동래구","부산진구","북구","사상구","사하구","서구","수영구","연제구","영도구","중구","해운대구"],
+
+    "대구광역시": ["남구","달서구","달성군","동구","북구","서구","수성구","중구"],
+
+    "인천광역시": ["강화군","계양구","남동구","동구","미추홀구","부평구","서구","연수구","옹진군","중구"],
+
+    "광주광역시": ["광산구","남구","동구","북구","서구"],
+
+    "대전광역시": ["대덕구","동구","서구","유성구","중구"],
+
+    "울산광역시": ["남구","동구","북구","울주군","중구"],
+
+    "세종특별자치시": ["세종시"],
+
+    "경기도": [
+        "가평군","고양시","과천시","광명시","광주시","구리시","군포시","김포시","남양주시",
+        "동두천시","부천시","성남시","수원시","시흥시","안산시","안성시","안양시","양주시",
+        "양평군","여주시","연천군","오산시","용인시","의왕시","의정부시","이천시","파주시",
+        "평택시","포천시","하남시","화성시"
+    ],
+
+    "강원특별자치도": [
+        "강릉시","고성군","동해시","삼척시","속초시","양구군","양양군","영월군","원주시",
+        "인제군","정선군","철원군","춘천시","태백시","평창군","홍천군","화천군","횡성군"
+    ],
+
+    "충청북도": ["괴산군","단양군","보은군","영동군","옥천군","음성군","제천시","진천군","청원군","청주시","충주시"],
+
+    "충청남도": ["계룡시","공주시","금산군","논산시","당진시","보령시","부여군","서산시","서천군","아산시","예산군","천안시","청양군","태안군","홍성군"],
+
+    "전북특별자치도": ["고창군","군산시","김제시","남원시","무주군","부안군","순창군","완주군","익산시","임실군","장수군","전주시","정읍시","진안군"],
+
+    "전라남도": ["강진군","고흥군","곡성군","광양시","구례군","나주시","담양군","목포시","무안군",
+        "보성군","순천시","신안군","여수시","영광군","영암군","완도군","장성군","장흥군",
+        "진도군","함평군","해남군","화순군"],
+
+    "경상북도": ["경산시","경주시","고령군","구미시","군위군","김천시","문경시","봉화군","상주시",
+        "성주군","안동시","영덕군","영양군","영주시","영천시","예천군","울릉군","울진군",
+        "의성군","청도군","청송군","칠곡군","포항시"],
+
+    "경상남도": ["거제시","거창군","고성군","김해시","남해군","밀양시","사천시","산청군","양산시",
+        "의령군","진주시","창녕군","창원시","통영시","하동군","함안군","함양군","합천군"],
+
+    "제주특별자치도": ["서귀포시","제주시"]
+};
+
+
+/* ------------------------------
+    시도 선택 → 시군구 자동 변경
+   ------------------------------ */
+
+const region1 = document.getElementById("region1");
+const region2 = document.getElementById("region2");
+
+function loadRegion1() {
+    region1.innerHTML = "<option selected>시·도 선택</option>";
+    Object.keys(regionData).forEach(sido => {
+        const op = document.createElement("option");
+        op.value = sido;
+        op.textContent = sido;
+        region1.appendChild(op);
+    });
+}
+
+function loadRegion2(sido) {
+    region2.innerHTML = "<option selected>시·군·구 선택</option>";
+    regionData[sido].forEach(item => {
+        const op = document.createElement("option");
+        op.value = item;
+        op.textContent = item;
+        region2.appendChild(op);
+    });
+}
+
+region1.addEventListener("change", () => {
+    loadRegion2(region1.value);
+});
+
+loadRegion1();
+
+
+/* ------------------------------
+        시간 자동 업데이트
+   ------------------------------ */
+
+function updateTime(){
+    const now = new Date();
+
+    const y = now.getFullYear();
+    const m = String(now.getMonth()+1).padStart(2,"0");
+    const d = String(now.getDate()).padStart(2,"0");
+    const h = String(now.getHours()).padStart(2,"0");
+    const mi = String(now.getMinutes()).padStart(2,"0");
+
+    document.getElementById("time").textContent =
+        `${y}년 ${m}월 ${d}일  ${h}시 ${mi}분`;
+}
+
+setInterval(updateTime, 1000);
+updateTime();
+
 </script>
 
 </body>
