--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     padding: 0;            /* ← 좌측 패딩 제거 */
 }
 
+.canvas select option {
+    background: #ffffff !important;
+    color: #000000 !important;
+}
   #sido { left: var(--select-left-1); top: var(--select-top); }
   #sigungu { left: var(--select-left-2); top: var(--select-top); }
 
