--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <div class="canvas" id="canvas">
 
-    <div class="bg"><img src="bok.png" alt="background"></div>
+    <div class="bg"><img src="bok.png" alt="backgrounds"></div>
 
     <div id="sidoDisplay" class="display-box">시·도 선택</div>
     <div id="sigunguDisplay" class="display-box">시·군·구 선택</div>
