--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Noblesse Time (풀 텍스트 버전)</title>
+<title>Noblesse Time (최종 완성본)</title>
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
@@ -114,30 +114,28 @@
         position: absolute;
         width: 100%;
         text-align: center;
-        /* 위치 조절: top 숫자 변경 */
         top: 710px; 
         z-index: 6;
         
         font-size: 26px;
         font-weight: 600;
-        color: #FFD700; /* 금색/노란색 */
-        text-shadow: 0 2px 6px rgba(0,0,0,0.9); /* 검은 그림자 진하게 */
+        color: #FFD700; 
+        text-shadow: 0 2px 6px rgba(0,0,0,0.9); 
         white-space: nowrap;
     }
 
-    /* 🔥 [2] 새로 추가된 하얀색 설명 문구 */
+    /* 🔥 [2] 하얀색 설명 문구 */
     #subMessage {
         position: absolute;
         width: 100%;
         text-align: center;
-        /* 노란 글씨보다 아래에 위치 */
         top: 760px; 
         z-index: 6;
         
-        font-size: 20px; /* 글씨 크기 조금 작게 */
-        line-height: 1.6; /* 줄 간격 */
+        font-size: 20px; 
+        line-height: 1.6; 
         font-weight: 500;
-        color: #FFFFFF; /* 흰색 */
+        color: #FFFFFF; 
         text-shadow: 0 2px 5px rgba(0,0,0,0.9);
     }
 
@@ -177,7 +175,7 @@
 
 <div class="canvas" id="canvas">
 
-    <div class="bg"><img src="bok.png" alt="backgrounds"></div>
+    <div class="bg"><img src="https://raw.githubusercontent.com/gwajeong8-glitch/noblesse-time/main/backgrounds.png" alt="backgrounds"></div>
 
     <div id="sidoDisplay" class="display-box">시·도 선택</div>
     <div id="sigunguDisplay" class="display-box">시·군·구 선택</div>
